# app

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  angular.json  certificate.pem  envoy-gateway-routing.yaml  example-kc.yaml  example-postgres.yaml  go.mod  key.pem  keycloak.crt  keycloak.key  network-policies.yaml  operatorgroup.yaml  package.json  skaffold  skaffold.yaml  subscription.yaml
.devcontainer/: devcontainer.json
deploy/charts/common/: Chart.yaml
deploy/charts/common/templates/: _deployment.yaml  _httproute.yaml  _protected-route.yaml  _security-policy.yaml  _service.yaml
deploy/charts/v1-service/: Chart.yaml  values.yaml
deploy/charts/v1-service/charts/: common-0.1.0.tgz
deploy/charts/v1-service/templates/: application.yaml
deploy/charts/v2-service/: Chart.yaml  values.yaml
deploy/charts/v2-service/charts/: common-0.1.0.tgz
deploy/charts/v2-service/templates/: application.yaml
deploy/gateway/: gateway.yaml
deploy/keycloak/config/: example-kc.yaml  keycloak-route.yaml  reference-grant.yaml
deploy/keycloak/db/: example-postgres.yaml
deploy/keycloak/operator/: operatorgroup.yaml  subscription.yaml
services/v1-service/: BUILD.bazel  main.go
services/v2-service/: BUILD.bazel  main.go
src/: index.html  styles.css
src/app/: app.component.css  app.component.html  app.component.ts
src/app/components/quick-action/: quick-action.component.css  quick-action.component.ts
src/app/components/recent-activity/: recent-activity.component.css  recent-activity.component.ts
src/app/components/section-card/: section-card.component.css  section-card.component.ts
src/app/components/stat-card/: stat-card.component.css  stat-card.component.ts
src/app/components/user-card/: user-card.component.css  user-card.component.ts
