load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load", "oci_push")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

go_library(
    name = "v1-service_lib",
    srcs = ["main.go"],
    importpath = "github.com/my-org/my-microservice/services/v1-service",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "v1-service",
    embed = [":v1-service_lib"],
    visibility = ["//visibility:public"],
    pure = "on"
)

# 1. Package the Go binary into a tarball
pkg_tar(
    name = "app_tar",
    srcs = [":v1-service"],
    package_dir = "/",
)

oci_image(
    name = "image",
    base = "@distroless_base",
    entrypoint = ["/v1-service"],
    tars = [":app_tar"],
)

oci_load(
    name = "load",
    image = ":image",
    repo_tags = ["v1-service:latest"],
)

oci_push(
    name = "push",
    image = ":image",
    remote_tags = ["latest"],
    repository = "localhost:5000/v1-service:latest",
)
